--- a/frontend/concretize-frontend/src/assets/shared-styles.css
+++ b/frontend/concretize-frontend/src/assets/shared-styles.css
@@ -3,6 +3,7 @@
 :root {
     --font-sans: "Overpass", sans-serif;
     --font-serif: "PT Serif", "Times New Roman", "Liberation Serif", serif;
+    --font-mono: "Latin Modern Mono", monospace;
     --text-size-big: 1.7em;
     --text-size-medium: 1.3em;
     --color-dark-text: hsl(0, 0%, 5%);
