--- a/frontend/concretize-frontend/src/assets/shared-styles.css
+++ b/frontend/concretize-frontend/src/assets/shared-styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("../../node_modules/bootstrap-icons/font/bootstrap-icons.css");
 :root {
     --font-sans: "Overpass", sans-serif;
     --font-serif: "PT Serif", "Times New Roman", "Liberation Serif", serif;
@@ -43,7 +44,7 @@ button:disabled {
 
 .notification-text {
     color: var(--color-gray-text);
-    font-family: var(--font-serif);
+    font-family: var(--font-sans);
     font-size: var(--text-size-medium);
 }
 
@@ -53,6 +54,11 @@ button:disabled {
 
 .no-underline {
     text-decoration: none !important;
+}
+
+.round-button {
+    border-radius: 50%;
+    padding: 5px 9px;
 }
 
 .concretize-logo {
